Fix up alignment and font weight

--- a/assets/css/pages/home.less
+++ b/assets/css/pages/home.less
@@ -331,8 +331,10 @@ main.home {
   padding: 1.25rem !important;
   max-width: 700px;
   margin: 1rem;
+  margin-top: 2.6rem !important;
   color: fadeout(@color-text, 10%);
   font-size: 1rem;
+  font-weight: 500;
 
   a {
     &:extend(.link);
@@ -426,7 +428,7 @@ main.home {
   padding: 1.25rem !important;
   max-width: 700px;
   color: fadeout(@color-text, 10%);
-  font-size: 1rem;
+  font-weight: 500;
 
   a {
     &:extend(.link);
